deleted duplicate images

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -217,6 +217,12 @@
                   <div class="message__content">OK</div>
                 </div>
                 <div class="message message--browser">
+                  <div class="message__content">What's the last date of registration?</div>
+                </div>
+                <div class="message message--server">
+                  <div class="message__content">4<sup>th</sup>Jan 2022</div>
+                </div>
+                <div class="message message--browser">
                   <div class="message__content">What is the mode of conduct?</div>
                 </div>
                 <div class="message message--server">
