--- a/views/prizes.hbs
+++ b/views/prizes.hbs
@@ -160,7 +160,7 @@
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="card-front"> 
-                  <img src="./img/prizes/polygon.png" alt="">
+                  <img src="img/sponsors/polygon.png" alt="">
                   <h4>Best hack built with Ethereum</h4>
                 </div>
 
@@ -177,7 +177,7 @@
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="card-front"> 
-                  <img id="tezos"src="./img/prizes/tezos.png" alt="">
+                  <img id="tezos"src="img/sponsors/tezos.png" alt="">
                   <h4>Best Dapp built on Tezos</h4>
                 </div>
 
@@ -194,7 +194,7 @@
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="card-front"> 
-                  <img id="celo" src="./img/prizes/celo.png" alt="">
+                  <img id="celo" src="img/sponsors/celo.png" alt="">
                   <h4>Best Dapp built on Celo</h4>
                 </div>
 
@@ -207,7 +207,7 @@
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="card-front"> 
-                  <img src="./img/prizes/filecoin.png" alt="">
+                  <img src="img/sponsors/filecoin.png" alt="">
                   <h4>Best use of IPFS and/or Filecoin</h4>
                 </div>
 
@@ -220,7 +220,7 @@
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="card-front"> 
-                  <img id="tezos"src="./img/prizes/symblAI.png" alt="">
+                  <img id="tezos"src="img/sponsors/symblAI.png" alt="">
                   <h4>Build with SymblAI API</h4>
                 </div>
 
@@ -233,7 +233,7 @@
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="card-front"> 
-                  <img id="tezos"src="./img/prizes/onecdot.png" alt="">
+                  <img id="tezos"src="img/sponsors/onecdot.png" alt="">
                   <h4>Best app built on Onec-NaaS</h4>
                 </div>
 
