--- a/views/home.hbs
+++ b/views/home.hbs
@@ -568,7 +568,7 @@
                 <div class="timeline-content">
                   <h4>Release of Problem Statements </h4>
                   <p>
-                    Problem statements focussing on the most recent and trending topics in the field of research and development will be released.
+                    Problem statements focussing on the recent and trending topics in the field of research and development will be released.
                   </p>
                 </div>
               </div>
@@ -914,7 +914,7 @@
                     >
                       <span style="vertical-align: sub"><i
                           class="material-icons prefix arrow-img1"
-                        >play_arrow</i></span>What is the Registration fee for
+                        >play_arrow</i></span>What is the registration fee for
                       hackathon?
                     </h3>
                     <p class="collapse box1" id="num5">Glad you asked.
