--- a/views/home.hbs
+++ b/views/home.hbs
@@ -558,7 +558,7 @@
                 <div class="timeline-content">
                   <h4>Workshop Series</h4>
                   <p >
-                    Every evening an informative speaker session will be conducted. The platform and link for the session will be shared on our website and Discord server before the event date. 
+                    In the evening informative speaker sessions will be conducted by industry experts. The platform and link for the session will be shared on our website and Discord server before the event date. 
                   </p>
                 </div>
               </div>
@@ -574,21 +574,21 @@
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">4th Jan 11:59 pm</div>
+                <div class="timeline-time">26th Dec - 4th Jan 11:59 pm </div>
                 <div class="timeline-content">
-                  <h4>Registration Ends</h4>
+                  <h4>Idea Submission </h4>
                   <p>
-                    This is the end of the registration phase. Teams should ensure all their members have registered on Devfolio before this date. 
+                    Registered teams will receive a form link after the release of problem statements. They need to select any one of the problem statements and submit an idea on how they are planning to go about their hack. Once an idea is submitted, they will receive the RSVP for the hackathon.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">4th Jan 11:59 pm </div>
+                <div class="timeline-time">4th Jan 11:59 pm</div>
                 <div class="timeline-content">
-                  <h4>Idea Submission </h4>
+                  <h4>Registration Ends</h4>
                   <p>
-                   Participating teams will have to select any one of the problem statements and submit an idea about how they are planning to go about their hack.
+                    This is the end of the registration phase. Teams should ensure all their members have registered on Devfolio before this date. 
                   </p>
                 </div>
               </div>
