--- a/views/home.hbs
+++ b/views/home.hbs
@@ -685,8 +685,8 @@
 																				justify-content: center;
 																				align-items: center;">
 
-              <a href="https://www.tatvic.com/about-us/what-we-do/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/sponsors/tatvic.PNG" alt="">
+              <a href="http://www.tatvic.com/?utm_source=StudentVisit&utm_medium=referral&utm_campaign=%7B%7BSVNIT%7D%7D" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/tatvic.PNG" style="width: 180px;"  alt="">
               </a>
               <a href="https://devfolio.co" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/devfolio.png" alt="">
@@ -711,6 +711,9 @@
               </a>
               <a href="https://onec.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/onecdot.png" alt="">
+              </a>
+              <a href="https://fusionhq.co/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/fusion.png" alt="">
               </a>
               <a href="https://www.leadlearners.ca/" target="_blank" class="sponsor" rel="noopener noreferrer" style="padding: 0px !important;">
                 <img src="img/sponsors/leading_learners.png" alt="" style="width: 140px; margin-left: 35px; margin-right: 35px">
