add alumni page and new sponsors

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -131,6 +131,7 @@
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="/alumni">Alumni</a></li>
 
               </ul>
             </nav>
@@ -712,6 +713,9 @@
               <a href="https://onec.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/onecdot.png" alt="">
               </a>
+              <a href="https://www.echo3d.co/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/echo3D.png" alt="">
+              </a>
               <a href="https://fusionhq.co/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/fusion.png" alt="">
               </a>
@@ -732,6 +736,9 @@
               </a>
               <a href="https://www.sketch.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/sketch.png" alt="">
+              </a>
+              <a href="https://www.noticebard.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/noticeBard.png" alt="">
               </a>
               
             </div>
