--- a/views/alumni.hbs
+++ b/views/alumni.hbs
@@ -53,12 +53,10 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/meteor.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/herostyles.css" />
     <link rel="stylesheet" href="./css/background.css" />
-    <link rel="stylesheet" href="./css/timeline.css" />
-    <link rel="stylesheet" href="./css/prizes.css" />
+    <link rel="stylesheet" href="./css/alumni.css" />
     <link rel="stylesheet" href="./css/animated.min.css" />
   </head>
 
@@ -105,12 +103,13 @@
               <ul class="main-nav nav navbar-nav navbar-right">
                 <li><a href="/#home">Home</a></li>
                 <li><a href="/#about">About</a></li>
-                <li><a href="#">Prizes</a></li>
+                <li><a href="/prizes">Prizes</a></li>
                 <li><a href="/#schedule">Schedule</a></li>
                 <li><a href="/#sponsors">Sponsors</a></li>
                 <li><a href="/#faq">FAQs</a></li>
                 <li><a href="/#contact">Contact</a></li>
-                <li><a href="/alumni">Alumni</a></li>
+                <li><a href="#">Alumni</a></li>
+
               </ul>
             </nav>
             <!-- /Navigation -->
@@ -119,191 +118,262 @@
         </header>
         
 
+        <!-- Alumni -->
+        <div class="alumni-greet">
+			<div class="greet-heading">
+				<h1>A Big thanks to our Alumni</h1>
+			</div>
+			<div class="alumni-greet-msg container">
+				<p>
+					We would like to thank our alumni for their humongous
+					contribution towards this event. Right from guiding us on
+					how to conduct Dotslash online for the first time, to
+					agreeing to be the mentors and sponsors on board for this
+					Hackathon, they have taken out the time for us and given us
+					immense support and encouragement. We appreciate all your
+					help and efforts, Dotslash 5.0 couldn't have been possible
+					without you!
+				</p>
+			</div>
+		</div>
+		<div class="container alumni-display">
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_1.jpeg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/subham-agrawal-38a826174/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Subham Agarwal</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_2.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/vedant-dalal/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Vedant Dalal</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_3.jfif" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/littlestar642/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Avinash Jaiswal</div>
+					<div class="card-body-position">Batch of 2016-2020</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_4.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/keshav-goyal-2807/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Keshav Goyal</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_5.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/rogin-koshy-aa5493144/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Rogin Koshy</div>
+					<div class="card-body-position">Batch of 2016-2020</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_6.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/abhijeet-mathur-58b812153/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Abhijeet Mathur</div>
+					<div class="card-body-position">Batch of 2016-2020</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_7.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/jaynil-shah-90814b179/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Jaynil Shah</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_8.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/akash-gangani/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Akash Gangani</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_9.jfif" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/akshay-busa-79608514b/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Akshay Busa</div>
+					<div class="card-body-position">Batch of 2016-2020</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_10.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/jrathod9/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Jay Rathod</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_11.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/devrajat/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Rajat Sharma</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_12.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/punit-jain-5852a316b/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Punit Jain</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="card-img">
+					<img src="./img/alumni/alumni_13.jpg" alt="" />
+				</div>
+				<div class="alumni-contact">
+					<a
+						href="https://www.linkedin.com/in/ronik-gandhi-97675b14b/"
+						rel="noopener noreferrer"
+						target="_blank"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</div>
+				<div class="card-body">
+					<div class="card-body-name">Ronik Gandhi</div>
+					<div class="card-body-position">Batch of 2017-2021</div>
+				</div>
+			</div>
+		</div>
+      <!-- /Alumni -->
 
-
-
-
-       <div id="prizes" class="section" style="margin-top: 100px;">
-        
-        <h3 class="title"><span style="color: white">Prizes</span></h3>
-        <div class="prizes-container">
-          <div class="overall-title">
-            <h4><span># </span>Overall</h4>
-          </div>
-          <div class="overall-prizes show-flexbox">
-            <div class="prize-info silver">
-              <img src="./img/prizes/first.svg" alt="" />
-              <div class="details">
-                <h2>1st Prize</h2>
-                <h3>Coming soon!</h3>
-              </div>
-            </div>
-            <div class="prize-info gold">
-              <img src="./img/prizes/second.svg" alt="" />
-              <div class="details">
-                <h2>2nd Prize</h2>
-                <h3>Coming soon!</h3>
-              </div>
-            </div>
-            <div class="prize-info bronze">
-              <img src="./img/prizes/third.svg" alt="" />
-              <div class="details">
-                <h2>3rd Prize</h2>
-                <h3>Coming soon!</h3>
-              </div>
-            </div>
-          </div>
-          <div class="sponsored-title">
-            <h4><span># </span>Sponsored Tracks</h4>
-          </div>
-          <div class="sponsered-tracks show-grid">
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="card-front"> 
-                  <img src="img/sponsors/polygon.png" alt="">
-                  <h4>Best hack built with Ethereum</h4>
-                </div>
-
-                <div class="card-back">
-                  <h4>
-                    <p>10000 INR for the best hack built on Ethereum.</p>
-                    <p>If the team integrates Polygon into their hacks, the prize money will be raised to 15000 INR.</p>
-                    <p>Eligibility for internship/full-time role interviews and seed funding of upto 5000 USD.</p>
-                  </h4>
-                </div>
-
-              </div>
-            </div>
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="card-front"> 
-                  <img id="tezos"src="img/sponsors/tezos.png" alt="">
-                  <h4>Best Dapp built on Tezos</h4>
-                </div>
-
-                <div class="card-back">
-                  <h4>
-                    <p>20000 INR for best Dapp built on Tezos.</p>
-                    <p>Continuity grant opportunity up to 5,000 USD for an outstanding project.</p>
-                    <p>Every valid submission made in the Tezos track will be rewarded with exclusive Schwag Kits.</p>
-                  </h4>
-                </div>
-
-              </div>
-            </div>
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="card-front"> 
-                  <img id="celo" src="img/sponsors/celo.png" alt="">
-                  <h4>Best Dapp built on Celo</h4>
-                </div>
-
-                <div class="card-back">
-                  <h4>20000 INR for best Dapp built on Celo.</h4>
-                </div>
-
-              </div>
-            </div>
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="card-front"> 
-                  <img src="img/sponsors/filecoin.png" alt="">
-                  <h4>Best use of IPFS and/or Filecoin</h4>
-                </div>
-
-                <div class="card-back">
-                  <h4>20000 INR for best use of IPFS and/or Filecoin</h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="card-front"> 
-                  <img id="tezos"src="img/sponsors/symblAI.png" alt="">
-                  <h4>Build with SymblAI API</h4>
-                </div>
-
-                <div class="card-back">
-                  <h4>$100 USD Amazon Gift Card + Symbl.ai Tshirt for the winning team if they use Symbl.ai</h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="card-front"> 
-                  <img id="tezos"src="img/sponsors/onecdot.png" alt="">
-                  <h4>Best app built on Onec-NaaS</h4>
-                </div>
-
-                <div class="card-back">
-                  <h4>
-                    <p>100$ USDT tokens on Polygon Network, worth ~7500 INR for the best application built on Onec-NaaS (Teams can cash it out whenever they want)</p>
-                    <p>5 $MATIC testnet tokens and close mentorship to teams building on the Onec-NaaS</p>
-                  </h4>
-                </div>
-              </div>
-            </div>
- 
-          </div>
-
-          <div class="swags-title">
-            <h4><span># </span>Swag Kit <span style="color: #00FFA4; opacity: 1">x</span> 50 Teams</h4>
-          </div>
-          <div class="swags-kit show-grid">
-            <div class="flip-card-container fun-prize-card">
-              <img src="./img/prizes/tshirt.png" alt="">
-                <h4>
-                  DotSlash Tshirt
-                </h4>
-            </div>
-            <div class="flip-card-container fun-prize-card">
-              <img src="./img/prizes/giphy.gif" alt="" style="width: 75%;">
-                <h4>
-                  Stickers & Goodies
-                </h4>
-            </div>
-          </div>
-
-          <div class="swags-title fun-prizes">
-            <h4><span># </span>Fun Prizes</h4>
-          </div>
-          <div class="swags-kit show-grid">
-            <div class="flip-card-container fun-prize-card">
-              <img src="./img/prizes/github-tee.png" alt="">
-                <h4>
-                  Github Tshirt
-                </h4>
-            </div>
-             <div class="flip-card-container fun-prize-card">
-              <img src="./img/prizes/octocat.png" alt="">
-                <h4>
-                  Github Stickers & Octocat Figurine
-                </h4>
-            </div>
-          </div>
-
-          <div class="swags-title prizes-for-all">
-            <h4><span># </span>Prizes for All</h4>
-          </div>
-          <div class="swags-kit show-grid">
-            <div class="flip-card-container for-all">
-             <h4>
-                  <p>GeeksForGeeks Rs 300 discount coupon on all courses</p>
-                  <p>Replit 1 month of Hacker Plan</p>
-                  <p>Echo3D 1-month FREE access to all Business Plan features</p>
-                  <p>Symbl.ai 3000 Minutes/credits worth $150 USD </p>
-                  <p>InterviewCake free course access</p>
-                  <p>Voiceflow Professional License</p>
-                </h4>
-            </div>
-          </div>
-          <p style="margin-top: 80px;"> Much More Exciting Prizes Coming Soon...</p>
-        </div>
-      </div>
-      
-      
 
       <!-- Footer -->
       <footer id="footer">
@@ -371,17 +441,16 @@
       </footer>
       <!-- /Footer -->
     </div>
-    <!-- jQuery Plugins -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
     {{!-- <script src="js/prizes.js"></script> --}}
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"
     ></script>
-    <script src="./js/countdown.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"
     ></script>
