--- a/views/alumni.hbs
+++ b/views/alumni.hbs
@@ -127,12 +127,11 @@
 				<p>
 					We would like to thank our alumni for their humongous
 					contribution towards this event. Right from guiding us on
-					how to conduct Dotslash online for the first time, to
-					agreeing to be the mentors and sponsors on board for this
-					Hackathon, they have taken out the time for us and given us
-					immense support and encouragement. We appreciate all your
-					help and efforts, Dotslash 5.0 couldn't have been possible
-					without you!
+					how to conduct DotSlash, to agreeing to be the mentors and 
+					sponsors on board for this Hackathon, they have taken out 
+					the time for us and given us immense support and encouragement. 
+					We appreciate all your help and efforts, Dotslash 5.0 couldn't 
+					have been possible without you!
 				</p>
 			</div>
 		</div>
