--- a/views/home.hbs
+++ b/views/home.hbs
@@ -130,6 +130,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="#schedule">Schedule</a></li>
+                <li><a href="#workshops">Workshops</a></li>
+                <li><a href="#workshop-speakers">Speakers</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 <li><a href="#contact">Contact</a></li>
