add new sponsor

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -695,6 +695,9 @@
               <a href="https://polygon.technology/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/polygon.png" alt="">
               </a>
+              <a href="https://www.vonage.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/vonage.png" alt="">
+              </a>
               <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/github_logo.png" alt="">
               </a>
