--- a/public/css/workshops.css
+++ b/public/css/workshops.css
@@ -1,7 +1,7 @@
 #workshops{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 25px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
     margin: 25px;
 
 }
