--- a/views/home.hbs
+++ b/views/home.hbs
@@ -509,22 +509,22 @@
             <div class="prize-info silver">
               <img src="./img/prizes/first.svg" alt="" />
               <div class="details">
-                <h2>1st Prize</h2>
-                <h3 style="text-decoration: none; color: white; opacity: 0.75;">Coming soon!</h3>
+                <img src="./img/prizes/24000.png"  alt="" />
+                <h2 style="font-size: 2rem;">1st Prize</h2>
               </div>
             </div>
             <div class="prize-info gold">
               <img src="./img/prizes/second.svg" alt="" />
               <div class="details">
-                <h2>2nd Prize</h2>
-                <h3 style="text-decoration: none; color: white; opacity: 0.75;">Coming soon!</h3>
+                <img src="./img/prizes/15000.png"  alt="" />
+                <h2 style="font-size: 2rem;">2nd Prize</h2>
               </div>
             </div>
             <div class="prize-info bronze">
               <img src="./img/prizes/third.svg" alt="" />
               <div class="details">
-                <h2>3rd Prize</h2>
-                <h3 style="text-decoration: none; color: white; opacity: 0.75;">Coming soon!</h3>
+                <img src="./img/prizes/9000.png"  alt="" />
+                <h2 style="font-size: 2rem;">3rd Prize</h2>
               </div>
             </div>
           </div>
