--- a/views/home.hbs
+++ b/views/home.hbs
@@ -713,6 +713,12 @@
               <a href="https://symbl.ai/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/symblAI.png" alt="">
               </a>
+              <a href="https://alan.app/?utm_source=Hackathon&utm_medium=hackdotslash" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/alan.png" alt="">
+              </a>
+              <a href="https://unitaslink.com" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/UnitasLink.JPG" alt="">
+              </a>
               <a href="https://onec.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/onecdot.png" alt="">
               </a>
