new sponsors + cash prize replaced

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -509,21 +509,21 @@
             <div class="prize-info silver">
               <img src="./img/prizes/first.svg" alt="" />
               <div class="details">
-                <img src="./img/prizes/24000.png"  alt="" />
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 24,000</h2>
                 <h2 style="font-size: 2rem;">1st Prize</h2>
               </div>
             </div>
             <div class="prize-info gold">
               <img src="./img/prizes/second.svg" alt="" />
               <div class="details">
-                <img src="./img/prizes/15000.png"  alt="" />
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 15,000</h2>
                 <h2 style="font-size: 2rem;">2nd Prize</h2>
               </div>
             </div>
             <div class="prize-info bronze">
               <img src="./img/prizes/third.svg" alt="" />
               <div class="details">
-                <img src="./img/prizes/9000.png"  alt="" />
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 9,000</h2>
                 <h2 style="font-size: 2rem;">3rd Prize</h2>
               </div>
             </div>
@@ -758,6 +758,34 @@
           <!-- /Sponsors -->
         </div>
 
+
+        <!-- Community Partners -->
+        <div id="community-partners">
+          <!-- container -->
+          <div class="container">
+            <div class="row">
+              <div class="section-subtitle">
+                <h3 class="title"><span style="color:white;">Community&nbsp;</span><span
+                    style="color: #bd0c0e;">Partners</span>
+                </h3>
+              </div>
+              <div style="display: flex;
+                              flex-wrap: wrap;
+                              justify-content: center;
+                              align-items: center;">
+                <a href="https://hackthisfall.tech/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                  <img src="img/sponsors/community/htf.png" alt="" style="width: 17rem">
+                </a>
+                <a href="https://studentambassadors.microsoft.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                  <img src="img/sponsors/community/mlsa.png" alt="" style="width: 60%">
+                </a>
+              </div>
+              <!-- /row -->
+            </div>
+            <!-- /container -->
+          </div>
+        </div>
+        <!-- /community partners  -->
 
        
 
