--- a/views/prizes.hbs
+++ b/views/prizes.hbs
@@ -135,21 +135,22 @@
               <img src="./img/prizes/first.svg" alt="" />
               <div class="details">
                 {{!-- <h2>1st Prize</h2> --}}
-                <img src="./img/prizes/24000.png"  alt="" />
+                {{!-- <img src="./img/prizes/cash1.png"  alt="" /> --}}
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 24,000</h2>
                 <h2 style="font-size: 2rem;">1st Prize</h2>
               </div>
             </div>
             <div class="prize-info gold">
               <img src="./img/prizes/second.svg" alt="" />
               <div class="details">
-                <img src="./img/prizes/15000.png"  alt="" />
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 15,000</h2>
                 <h2 style="font-size: 2rem;">2nd Prize</h2>
               </div>
             </div>
             <div class="prize-info bronze">
               <img src="./img/prizes/third.svg" alt="" />
               <div class="details">
-                <img src="./img/prizes/9000.png"  alt="" />
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 9,000</h2>
                 <h2 style="font-size: 2rem;">3rd Prize</h2>
               </div>
             </div>
@@ -242,6 +243,38 @@
                   <h4>
                     <p>100$ USDT tokens on Polygon Network, worth ~7500 INR for the best application built on Onec-NaaS (Teams can cash it out whenever they want)</p>
                     <p>5 $MATIC testnet tokens and close mentorship to teams building on the Onec-NaaS</p>
+                  </h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="flip-card-container">
+              <div class="flip-card">
+                <div class="card-front"> 
+                  <img id="tezos"src="img/sponsors/alan.png" alt="">
+                  <h4>Best use of Alan AI</h4>
+                </div>
+
+                <div class="card-back">
+                  <h4>
+                    <p>1st Prize Winner: 5000 INR</p>
+                    <p>2nd Prize winner: 2500 INR</p>
+                    <p>Multiple giveaways of 500 INR Amazon gift card</p>
+                  </h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="flip-card-container">
+              <div class="flip-card">
+                <div class="card-front"> 
+                  <img id="tezos"src="img/sponsors/UnitasLink.JPG" alt="">
+                  <h4>Best Web3 Project</h4>
+                </div>
+
+                <div class="card-back">
+                  <h4>
+                    Cash prize of 10,000 for the best Web3 project to teams using any of NFT, DeFi, DAO, Dapp in their build
                   </h4>
                 </div>
               </div>
