workshop and navbar fixes

--- a/views/alumni.hbs
+++ b/views/alumni.hbs
@@ -101,10 +101,10 @@
             <!-- Navigation -->
             <nav id="nav">
               <ul class="main-nav nav navbar-nav navbar-right">
-                <li><a href="/#home">Home</a></li>
                 <li><a href="/#about">About</a></li>
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="/#schedule">Schedule</a></li>
+				<li><a href="/#workshops">Sessions</a></li>
                 <li><a href="/#sponsors">Sponsors</a></li>
                 <li><a href="/#faq">FAQs</a></li>
                 <li><a href="/#contact">Contact</a></li>
