--- a/views/home.hbs
+++ b/views/home.hbs
@@ -130,11 +130,10 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#workshops">Workshops</a></li>
-                <li><a href="#workshop-speakers">Speakers</a></li>
+                <li><a href="#workshops">Sessions</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
-                {{!-- <li><a href="#contact">Contact</a></li> --}}
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="/alumni">Alumni</a></li>
 
               </ul>
@@ -645,110 +644,13 @@
 
       <!-- section title -->
       <div class="section-title" style="margin-top: 100px;">
-        <h3 class="title"><span style="color: white">Workshops</span></h3>
+        <h3 class="title"><span style="color: white">Speaker&nbsp;</span><span
+                    style="color: #bd0c0e;"
+                  > Sessions</span>
+        </h3>
       </div>
       <div class="container">
         <div id="workshops">
-          <div class="workshop-card">
-            <div class="workshop-title">
-            <h1>Building Tech Careers through Open Source projects</h1>
-            <div class="event-dates">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
-              <span>27/12/2021 &nbsp; 7:00 PM IST</span>
-            </div>
-            </div>
-            <div class="workshop-speaker">
-              <img src="img/speakers/mock-speaker.jpeg" alt="">
-              <div>
-                <h2>Logan Kilpatrick</h2>
-                <h4>Community Manager, The Julia Language</h4>
-              </div>
-            </div>
-            <button class="session-link">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
-              Session Link
-            </button>
-          </div>
-          <div class="workshop-card">
-            <div class="workshop-title">
-            <h1>Building Tech Careers through Open Source projects</h1>
-            <div class="event-dates">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
-              <span>27/12/2021 &nbsp; 7:00 PM IST</span>
-            </div>
-            </div>
-            <div class="workshop-speaker">
-              <img src="img/speakers/mock-speaker.jpeg" alt="">
-              <div>
-                <h2>Logan Kilpatrick</h2>
-                <h4>Community Manager, The Julia Language</h4>
-              </div>
-            </div>
-            <button class="session-link">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
-              Session Link
-            </button>
-          </div>
-          <div class="workshop-card">
-            <div class="workshop-title">
-            <h1>Building Tech Careers through Open Source projects</h1>
-            <div class="event-dates">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
-              <span>27/12/2021 &nbsp; 7:00 PM IST</span>
-            </div>
-            </div>
-            <div class="workshop-speaker">
-              <img src="img/speakers/mock-speaker.jpeg" alt="">
-              <div>
-                <h2>Logan Kilpatrick</h2>
-                <h4>Community Manager, The Julia Language</h4>
-              </div>
-            </div>
-            <button class="session-link">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
-              Session Link
-            </button>
-          </div>
-          <div class="workshop-card">
-            <div class="workshop-title">
-            <h1>Building Tech Careers through Open Source projects</h1>
-            <div class="event-dates">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
-              <span>27/12/2021 &nbsp; 7:00 PM IST</span>
-            </div>
-            </div>
-            <div class="workshop-speaker">
-              <img src="img/speakers/mock-speaker.jpeg" alt="">
-              <div>
-                <h2>Logan Kilpatrick</h2>
-                <h4>Community Manager, The Julia Language</h4>
-              </div>
-            </div>
-            <button class="session-link">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
-              Session Link
-            </button>
-          </div>
-          <div class="workshop-card">
-            <div class="workshop-title">
-            <h1>Building Tech Careers through Open Source projects</h1>
-            <div class="event-dates">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
-              <span>27/12/2021 &nbsp; 7:00 PM IST</span>
-            </div>
-            </div>
-            <div class="workshop-speaker">
-              <img src="img/speakers/mock-speaker.jpeg" alt="">
-              <div>
-                <h2>Logan Kilpatrick</h2>
-                <h4>Community Manager, The Julia Language</h4>
-              </div>
-            </div>
-            <button class="session-link">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
-              Session Link
-            </button>
-          </div>
           <div class="workshop-card">
             <div class="workshop-title">
             <h1>Building Tech Careers through Open Source projects</h1>
@@ -773,7 +675,7 @@
       </div>
       
 
-      <!-- section title -->
+      {{!-- <!-- section title -->
       <div class="section-title" style="margin-top: 100px;">
         <h3 class="title"><span style="color: white">Speakers</span></h3>
       </div>
@@ -784,28 +686,8 @@
             <h1 class="speaker-title">Logan Kilpatrick</h1>
             <h3 class="speaker-designation">Community Manager<br>The Julia Language</h3>
           </div>
-          <div class="speaker-card">
-            <img src="img/speakers/mock-speaker.jpeg" alt="">
-            <h1 class="speaker-title">Logan Kilpatrick</h1>
-            <h3 class="speaker-designation">Community Manager<br>The Julia Language</h3>
-          </div>
-          <div class="speaker-card">
-            <img src="img/speakers/mock-speaker.jpeg" alt="">
-            <h1 class="speaker-title">Logan Kilpatrick</h1>
-            <h3 class="speaker-designation">Community Manager<br>The Julia Language</h3>
-          </div>
-          <div class="speaker-card">
-            <img src="img/speakers/mock-speaker.jpeg" alt="">
-            <h1 class="speaker-title">Logan Kilpatrick</h1>
-            <h3 class="speaker-designation">Community Manager<br>The Julia Language</h3>
-          </div>
-          <div class="speaker-card">
-            <img src="img/speakers/mock-speaker.jpeg" alt="">
-            <h1 class="speaker-title">Logan Kilpatrick</h1>
-            <h3 class="speaker-designation">Community Manager<br>The Julia Language</h3>
-          </div>
         </div>
-      </div>
+      </div> --}}
       
       
       <div class="tracks container section">
