--- a/views/home.hbs
+++ b/views/home.hbs
@@ -130,7 +130,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#workshops">Sessions</a></li>
+                {{!-- <li><a href="#workshops">Sessions</a></li> --}}
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -643,7 +643,7 @@
       </div>
 
       <!-- section title -->
-      <div class="section-title" style="margin-top: 100px;">
+      {{!-- <div class="section-title" style="margin-top: 100px;">
         <h3 class="title"><span style="color: white">Speaker&nbsp;</span><span
                     style="color: #bd0c0e;"
                   > Sessions</span>
@@ -672,7 +672,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> --}}
       
 
       {{!-- <!-- section title -->
