--- a/views/prizes.hbs
+++ b/views/prizes.hbs
@@ -106,7 +106,7 @@
                 <li><a href="/#about">About</a></li>
                 <li><a href="#">Prizes</a></li>
                 <li><a href="/#schedule">Schedule</a></li>
-                <li><a href="/#workshops">Sessions</a></li>
+                {{!-- <li><a href="/#workshops">Sessions</a></li> --}}
                 <li><a href="/#sponsors">Sponsors</a></li>
                 <li><a href="/#faq">FAQs</a></li>
                 <li><a href="/#contact">Contact</a></li>
