--- a/public/css/workshops.css
+++ b/public/css/workshops.css
@@ -1,7 +1,7 @@
 #workshops{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 30px;
+    grid-gap: 40px;
     margin: 25px;
 
 }
@@ -84,4 +84,8 @@
         margin: 5px;
         grid-gap: 25px 0px;
     }
+}
+
+.workshop-card a{
+    all: none;
 }
