--- a/views/home.hbs
+++ b/views/home.hbs
@@ -658,7 +658,7 @@
             <div id="workshops">
               <div class="workshop-card">
                 <div class="workshop-title">
-                <h1>Beginner's guide to hackathons </h1>
+                <h1>Beginner's guide to hackathon</h1>
                 <div class="event-dates">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
                   <span>24/12/2021 &nbsp; 6:00 PM IST</span>
@@ -667,7 +667,7 @@
                 <div class="workshop-speaker">
                   <img src="img/2022/new_logo.png" style="border: none; height: auto; width:60px"  alt="">
                   <div>
-                    <h2>HackDotslash</h2>
+                    <h2>HackDotSlash</h2>
                     <h4>Organising Team</h4>
                   </div>
                 </div>
@@ -713,7 +713,7 @@
                     <img src="img/speakers/akanksha.png" alt="">
                     <div>
                       <h2>Akanksha Bhasin</h2>
-                      <h4>DevRel @Symbl.ai </h4>
+                      <h4>DevRel at Symbl.ai </h4>
                     </div>
                   </div>
                 </a>
@@ -759,7 +759,7 @@
                     <img src="img/speakers/dwane.jpg" alt="">
                     <div>
                       <h2>Dwane Hemmings</h2>
-                      <h4>Dev Advocate @ Vonage</h4>
+                      <h4>Dev Advocate at Vonage</h4>
                     </div>
                   </div>
                 </a>
@@ -952,7 +952,7 @@
                 <a href="https://studentambassadors.microsoft.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                   <img src="img/sponsors/community/mlsa.png" alt="" style="width: 60%">
                 </a>
-                <a href="https://studentambassadors.microsoft.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <a href="https://gdsc.community.dev/indian-institute-of-information-technology-surat/" target="_blank" class="sponsor" rel="noopener noreferrer">
                   <img src="img/sponsors/community/gdsciiitsurat.png" alt="" >
                 </a>
               </div>
