--- a/views/home.hbs
+++ b/views/home.hbs
@@ -130,7 +130,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                {{!-- <li><a href="#workshops">Sessions</a></li> --}}
+                <li><a href="#sessions">Sessions</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -643,37 +643,159 @@
       </div>
 
       <!-- section title -->
-      {{!-- <div class="section-title" style="margin-top: 100px;">
-        <h3 class="title"><span style="color: white">Speaker&nbsp;</span><span
+      <div id="sessions" class="section" style="margin-top: 80px;">
+        <!-- container -->
+        <div class="container">
+          <!-- row -->
+          <div class="row">
+            <!-- section title -->
+            <div class="section-title">
+              <h3 class="title"><span style="color: white">Speaker&nbsp;</span><span
                     style="color: #bd0c0e;"
                   > Sessions</span>
-        </h3>
-      </div>
-      <div class="container">
-        <div id="workshops">
-          <div class="workshop-card">
-            <div class="workshop-title">
-            <h1>Building Tech Careers through Open Source projects</h1>
-            <div class="event-dates">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
-              <span>27/12/2021 &nbsp; 7:00 PM IST</span>
+              </h3>
             </div>
-            </div>
-            <div class="workshop-speaker">
-              <img src="img/speakers/mock-speaker.jpeg" alt="">
-              <div>
-                <h2>Logan Kilpatrick</h2>
-                <h4>Community Manager, The Julia Language</h4>
+            <div id="workshops">
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Beginner's guide to hackathon</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>24/12/2021 &nbsp; 6:00 PM IST</span>
+                </div>
+                </div>
+                <div class="workshop-speaker">
+                  <img src="img/2022/new_logo.png" style="border: none; height: auto; width:60px"  alt="">
+                  <div>
+                    <h2>HackDotSlash</h2>
+                    <h4>Organising Team</h4>
+                  </div>
+                </div>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
               </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Expansion 101</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>25/12/2021 &nbsp; 9:00 PM IST</span>
+                </div>
+                </div>
+                <a href="https://www.linkedin.com/in/galicia-gordon/">
+                  <div class="workshop-speaker">
+                      <img src="img/speakers/galicia.jpg" alt="">
+                      <div>
+                        <h2>Galicia Gordon</h2>
+                        <h4>Founder at Leading Learners</h4>
+                      </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Getting started with Symbl.ai</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>27/12/2021 &nbsp; 7:30 PM IST</span>
+                </div>
+                </div>
+                <a href="https://www.linkedin.com/in/akankshabhasin/">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/akanksha.png" alt="">
+                    <div>
+                      <h2>Akanksha Bhasin</h2>
+                      <h4>DevRel at Symbl.ai </h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Rise of open-source SaaS</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>29/12/2021 &nbsp; 7:30 PM IST</span>
+                </div>
+                </div>
+                <a href="https://twitter.com/dr_viktor_doom">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/vikas.jpg" alt="">
+                    <div>
+                      <h2>Vikas Singh</h2>
+                      <h4>Full Stack Developer at FusionHQ</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Using Vonage Video Express and Video API</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>5/1/2022 &nbsp; 7:00 PM IST</span>
+                </div>
+                </div>
+                <a href="https://twitter.com/lifelongdev">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/dwane.jpg" alt="">
+                    <div>
+                      <h2>Dwane Hemmings</h2>
+                      <h4>Dev Advocate at Vonage</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Adding in-app AI voice assistants to mobile or web apps</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>6/1/2022 &nbsp; 6:30 PM IST</span>
+                </div>
+                </div>
+                <a href="https://www.linkedin.com/in/asdivyansh/">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/divyansh.jpeg" alt="">
+                    <div>
+                      <h2>Divyansh Chaurasia</h2>
+                      <h4>Developer Evangelist at Alan AI</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
             </div>
-            <button class="session-link">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
-              Session Link
-            </button>
           </div>
         </div>
-      </div> --}}
-      
+      </div>
 
       {{!-- <!-- section title -->
       <div class="section-title" style="margin-top: 100px;">
@@ -830,6 +952,9 @@
                 <a href="https://studentambassadors.microsoft.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                   <img src="img/sponsors/community/mlsa.png" alt="" style="width: 60%">
                 </a>
+                <a href="https://gdsc.community.dev/indian-institute-of-information-technology-surat/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                  <img src="img/sponsors/community/gdsciiitsurat.png" alt="" >
+                </a>
               </div>
               <!-- /row -->
             </div>
@@ -841,7 +966,7 @@
        
 
         <!-- become-sponsor -->
-        <div id="become-sponsor" class="section" style="margin-top: 100px;">
+        <div id="become-sponsor" class="section" style="margin-top: 150px;">
           <svg class="dotted-line" width="1920" height="859" viewBox="0 0 1920 859" fill="none" xmlns="http://www.w3.org/2000/svg">
             <defs>
               <style type="text/css">
@@ -911,7 +1036,7 @@
 
         <!-- FAQS -->
 
-        <div id="faq" class="section">
+        <div id="faq" class="section" style="margin-top: 50px;">
           <!-- container -->
           <div class="container">
             <!-- row -->
