fix: incorrect file name

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -710,7 +710,7 @@
                 </div>
                 <a href="https://www.linkedin.com/in/akankshabhasin/">
                   <div class="workshop-speaker">
-                    <img src="img/speakers/akanksha.png" alt="">
+                    <img src="img/speakers/akanksha.PNG" alt="">
                     <div>
                       <h2>Akanksha Bhasin</h2>
                       <h4>DevRel at Symbl.ai </h4>
