--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,6 +22,7 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
+    <link rel="image_src" href="/img/logo_only.png" />
     <meta property="og:url" content="https://www.hackdotslash.co.in" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="google" content="notranslate" />
