--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,11 +18,11 @@
 														platform for developers around the world to use their innovative skills to produce something new and
 														useful for the society."
     />
-    <meta property="og:image:secure_url" content="/img/logo_only.png" />
+    {{!-- <meta property="og:image:secure_url" content="/img/logo_only.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
-    <link rel="image_src" href="/img/logo_only.png" />
+    <meta property="og:image:height" content="300" /> --}}
+    <meta name="image" property="og:image" content="/img/logo_only.png">
     <meta property="og:url" content="https://www.hackdotslash.co.in" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="google" content="notranslate" />
