--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,21 +8,18 @@
     <meta property="og:title" content="Dotslash Hackathon: Root To Ideas" />
     <meta
       property="og:description"
-      content="DotSlash​ is a 36 hours long hackathon which is completely managed by students of SVNIT, Surat. It is a
-										platform for developers around the world to use their innovative skills to produce something new and
-										useful for the society."
+      content="DotSlash​ is a 36 hours long hackathon which is completely managed by students of SVNIT, Surat. It is a platform for developers around the world to use their innovative skills to produce something new and useful for the society."
     />
     <meta
       name="Description"
-      content="DotSlash​ is a 36 hours long hackathon which is completely managed by students of SVNIT, Surat. It is a
-														platform for developers around the world to use their innovative skills to produce something new and
-														useful for the society."
+      content="DotSlash​ is a 36 hours long hackathon which is completely managed by students of SVNIT, Surat. It is a platform for developers around the world to use their innovative skills to produce something new and useful for the society."
     />
     {{!-- <meta property="og:image:secure_url" content="/img/logo_only.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" /> --}}
     <meta name="image" property="og:image" content="/img/logo_only.png">
+    <meta property="og:image" content="/img/logo_only.png">
     <meta property="og:url" content="https://www.hackdotslash.co.in" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="google" content="notranslate" />
