--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,7 +20,7 @@
     <meta property="og:image:height" content="300" /> --}}
     <meta name="image" property="og:image" content="https://hackdotslash.co.in//img/logo_only.png">
     <meta property="og:image" content="/img/logo_only.png">
-    <meta property="twitter:card" content="/img/logo_only.png">
+    <meta property="twitter:card" content="summary">
     <meta property="og:url" content="https://www.hackdotslash.co.in" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="google" content="notranslate" />
