--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,7 +18,7 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" /> --}}
-    <meta name="image" property="og:image" content="https://hackdotslash.co.in//img/logo_only.png">
+    <meta name="image" property="og:image" content="https://hackdotslash.co.in/img/logo_only.png">
     <meta property="og:image" content="/img/logo_only.png">
     <meta property="twitter:card" content="summary">
     <meta property="og:url" content="https://www.hackdotslash.co.in" />
