--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,9 +19,9 @@
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" /> --}}
     <meta name="image" property="og:image" content="https://hackdotslash.co.in/img/logo_only.png">
-    <meta property="og:image" content="/img/logo_only.png">
-    <meta property="twitter:card" content="summary">
+    <meta property="og:image" content="https://hackdotslash.co.in/img/logo_only.png">
     <meta property="og:url" content="https://www.hackdotslash.co.in" />
+    <meta property="twitter:card" content="summary">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
