--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,14 +17,9 @@
     {{!-- <meta property="og:image:secure_url" content="/img/logo_only.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
-<<<<<<< HEAD
-    <meta property="og:image:height" content="300" />
-    <link rel="image_src" href="/img/logo_only.png" />
-=======
     <meta property="og:image:height" content="300" /> --}}
     <meta name="image" property="og:image" content="https://hackdotslash.co.in/img/logo_only2.png">
     <meta property="og:image" content="https://hackdotslash.co.in/img/logo_only2.png">
->>>>>>> master
     <meta property="og:url" content="https://www.hackdotslash.co.in" />
     <meta property="twitter:card" content="summary">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -562,7 +557,7 @@
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">20th Dec - 5th Jan</div>
+                <div class="timeline-time">24th Dec - 5th Jan</div>
                 <div class="timeline-content">
                   <h4>Workshop Series</h4>
                   <p >
@@ -706,6 +701,29 @@
 
               <div class="workshop-card">
                 <div class="workshop-title">
+                <h1>Blockchain based tokenization</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>26/12/2021 &nbsp; 4:00 PM IST</span>
+                </div>
+                </div>
+                <a href="https://twitter.com/sudeepbiswas02">
+                  <div class="workshop-speaker">
+                      <img src="img/speakers/sudeep.jpg" alt="">
+                      <div>
+                        <h2>Sudeep Biswas</h2>
+                        <h4>Blockchain Developer at Appinventiv</h4>
+                      </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
                 <h1>Getting started with Symbl.ai</h1>
                 <div class="event-dates">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
@@ -714,14 +732,33 @@
                 </div>
                 <a href="https://www.linkedin.com/in/akankshabhasin/">
                   <div class="workshop-speaker">
-<<<<<<< HEAD
-                    <img src="img/speakers/akanksha.png" alt="">
-=======
                     <img src="img/speakers/akanksha.PNG" alt="">
->>>>>>> master
                     <div>
                       <h2>Akanksha Bhasin</h2>
                       <h4>DevRel at Symbl.ai </h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Azure Hackbook for Hackathons</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>28/12/2021 &nbsp; 7:00 PM IST</span>
+                </div>
+                </div>
+                <a href="https://twitter.com/vivek_sridhar">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/vivek.jpeg" alt="">
+                    <div>
+                      <h2>Vivek Sridhar</h2>
+                      <h4>Senior Cloud Advocate at Microsoft </h4>
                     </div>
                   </div>
                 </a>
@@ -926,6 +963,9 @@
               </a>
               <a href="https://www.sketch.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/sketch.png" alt="">
+              </a>
+              <a href="https://gen.xyz/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/xyz.png" alt="" style="width: 70%;">
               </a>
               <a href="https://www.noticebard.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/noticeBard.png" alt="">
