--- a/views/home.hbs
+++ b/views/home.hbs
@@ -126,8 +126,8 @@
             <nav id="nav">
               <ul class="main-nav nav navbar-nav navbar-right">
                 {{!-- <li><a href="#home">Home</a></li> --}}
-                <li><a href="https://drive.google.com/file/d/15kLpmHq2rDHVMleS_x7e326blygRExFJ/view">Themes</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="https://drive.google.com/file/d/15kLpmHq2rDHVMleS_x7e326blygRExFJ/view">Problem Statements</a></li>
+                {{!-- <li><a href="#about">About</a></li> --}}
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#sessions">Sessions</a></li>
