--- a/views/prizes.hbs
+++ b/views/prizes.hbs
@@ -103,8 +103,8 @@
             <!-- Navigation -->
             <nav id="nav">
               <ul class="main-nav nav navbar-nav navbar-right">
-                <li><a href="https://drive.google.com/file/d/15kLpmHq2rDHVMleS_x7e326blygRExFJ/view">Themes</a></li>
-                <li><a href="/#about">About</a></li>
+                <li><a href="https://drive.google.com/file/d/15kLpmHq2rDHVMleS_x7e326blygRExFJ/view">Problem Statements</a></li>
+                {{!-- <li><a href="/#about">About</a></li> --}}
                 <li><a href="#">Prizes</a></li>
                 <li><a href="/#schedule">Schedule</a></li>
                 <li><a href="/#workshops">Sessions</a></li>
