--- a/views/home.hbs
+++ b/views/home.hbs
@@ -131,6 +131,7 @@
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#sessions">Sessions</a></li>
+                <li><a href="#mentors">Mentors</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 {{!-- <li><a href="#contact">Contact</a></li> --}}
@@ -287,7 +288,8 @@
               <p>Explore the realms of Web and Mobile based applications while
                 developing your ideas. You are free to use any framework and any
                 code fragment, until and unless it is open sourced. The limits are endless and the possiblities are infinite.</p>
-              <span><b style="color:  #bd0c0e; font-size: 19px">Problem Statements will be released on 26th December.</b> <br/>Kindly checkout the full schedule below for more details.</span>
+              <span><b> <a href="https://drive.google.com/file/d/15kLpmHq2rDHVMleS_x7e326blygRExFJ/view" style="color:  #bd0c0e; font-size: 19px">Problem Statements have been released<i class="fa fa-external-link" aria-hidden="true" style="margin-left: 5px;"></i></a></b> 
+              <br/>Kindly checkout the full schedule below for more details.</span>
             </div>
             <br />
             <br />
@@ -659,7 +661,7 @@
 
               <div class="workshop-card">
                 <div class="workshop-title">
-                  <h1>Beginner's guide to hackathon</h1>
+                  <h1>Beginner's Guide to Hackathons</h1>
                   <div class="event-dates">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
                     <span>24/12/2021 &nbsp; 6:00 PM IST</span>
@@ -703,7 +705,7 @@
 
               <div class="workshop-card">
                 <div class="workshop-title">
-                <h1>Blockchain based tokenization</h1>
+                <h1>Blockchain Based Tokenization</h1>
                 <div class="event-dates">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
                   <span>26/12/2021 &nbsp; 4:00 PM IST</span>
@@ -726,7 +728,7 @@
 
               <div class="workshop-card">
                 <div class="workshop-title">
-                <h1>Getting started with Symbl.ai</h1>
+                <h1>Getting Started with Symbl.ai</h1>
                 <div class="event-dates">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
                   <span>27/12/2021 &nbsp; 7:30 PM IST</span>
@@ -772,7 +774,7 @@
 
               <div class="workshop-card">
                 <div class="workshop-title">
-                <h1>Rise of open-source SaaS</h1>
+                <h1>Rise of Open-Source SaaS</h1>
                 <div class="event-dates">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
                   <span>29/12/2021 &nbsp; 7:30 PM IST</span>
@@ -784,6 +786,52 @@
                     <div>
                       <h2>Vikas Singh</h2>
                       <h4>Full Stack Developer at FusionHQ</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Progressive Web Apps - A Revolution into Mobile landscape</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>2/1/2022 &nbsp; 4:30 PM IST</span>
+                </div>
+                </div>
+                <a href="https://www.linkedin.com/in/ranjoysen">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/ranjoy.png" alt="">
+                    <div>
+                      <h2>Ranjoy Sen</h2>
+                      <h4>Staff Software Developer at Collins Aerospace</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Roadmap to Dream Company</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>2/1/2022 &nbsp; 8:00 PM IST</span>
+                </div>
+                </div>
+                <a href="https://www.linkedin.com/in/kirti-gera/">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/kirti.png" alt="">
+                    <div>
+                      <h2>Kirti Gera</h2>
+                      <h4>Course Mentor at GeeksforGeeks</h4>
                     </div>
                   </div>
                 </a>
@@ -844,21 +892,86 @@
         </div>
       </div>
 
-      {{!-- <!-- section title -->
-      <div class="section-title" style="margin-top: 100px;">
-        <h3 class="title"><span style="color: white">Speakers</span></h3>
-      </div>
-      <div class="container">
-        <div id="workshop-speakers">
-          <div class="speaker-card">
-            <img src="img/speakers/mock-speaker.jpeg" alt="">
-            <h1 class="speaker-title">Logan Kilpatrick</h1>
-            <h3 class="speaker-designation">Community Manager<br>The Julia Language</h3>
+      <!-- section title -->
+      <div id="mentors" class="section" style="margin-top: 80px;">
+        <!-- container -->
+        <div class="container">
+          <!-- row -->
+          <div class="row">
+            <!-- section title -->
+            <div class="section-title">
+              <h3 class="title"><span style="color: white">Mentors</span>
+              </h3>
+            </div>
+            <div id="workshop-speakers">
+              <a href="https://www.linkedin.com/in/naitik-dodia-60b496147/">
+                <div class="speaker-card">
+                  <img src="img/mentors/naitik.png" alt="">
+                  <h1 class="speaker-title">Naitik Dodia</h1>
+                  <h3 class="speaker-designation">Machine Learning Engineer<br>Amazon</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/anushbhatia/">
+                <div class="speaker-card">
+                  <img src="img/mentors/anush.png" alt="">
+                  <h1 class="speaker-title">Anush Bhatia</h1>
+                  <h3 class="speaker-designation">Senior Software Engineer<br>Capgemini</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/vanshikagarg17/">
+                <div class="speaker-card">
+                  <img src="img/mentors/vanshika.png" alt="">
+                  <h1 class="speaker-title">Vanshika Garg </h1>
+                  <h3 class="speaker-designation">Data Scientist <br>Fractal Analytics </h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/dhruvam-zaveri">
+                <div class="speaker-card">
+                  <img src="img/mentors/dhruvam.png" alt="">
+                  <h1 class="speaker-title">Dhruvam Zaveri</h1>
+                  <h3 class="speaker-designation">SDE Intern<br>Motorola Solutions, India</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/ksatyarth2/">
+                <div class="speaker-card">
+                  <img src="img/mentors/kumar.png" alt="">
+                  <h1 class="speaker-title">Kumar Satyarth</h1>
+                  <h3 class="speaker-designation">Smart Contract Developer<br>Timeswap Labs</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/himanshusharma89/">
+                <div class="speaker-card">
+                  <img src="img/mentors/himanshu.png" alt="">
+                  <h1 class="speaker-title">Himanshu Sharma</h1>
+                  <h3 class="speaker-designation">SWE Intern<br>Vymo</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/praveentech/">
+                <div class="speaker-card">
+                  <img src="img/mentors/praveen.png" alt="">
+                  <h1 class="speaker-title">Praveen Kumar Purushothaman</h1>
+                  <h3 class="speaker-designation">Full Stack JavaScript Developer</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/ashutosh1919">
+                <div class="speaker-card">
+                  <img src="img/mentors/Ashutosh.png" alt="">
+                  <h1 class="speaker-title">Ashutosh Husainali Hathidara</h1>
+                  <h3 class="speaker-designation">Student<br>Indiana University Bloomington</h3>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
-      </div> --}}
-      
-      
+      </div>
+        
       <div class="tracks container section">
         <div class="modal" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
